# finance-dashboard

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  docker-compose.yml  setup.sh  skills-lock.json
api/: alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_add_tracked_yahoo_symbol.py  0003_add_dashboard_groups.py
api/app/: config.py  main.py
api/app/models/: __init__.py  asset.py  dashboard_group.py  financials.py  fundamentals.py  price_history.py
api/app/routers/: assets.py  financials.py  fundamentals.py  groups.py  prices.py
api/app/schemas/: __init__.py  asset.py  dashboard_group.py  financials.py  fundamentals.py  price.py
api/ingestion/: db.py  ingest.py  utils.py
ingestion/: ingest.py  ingest_daily.py  ingest_global.py  ingest_idx.py  run_daily.sh  schema.sql  setup_db.py  setup_vps.sh
ingestion_pg/: pyproject.toml
ingestion_pg/finance_ingestion/: db.py  ingest_daily.py  ingest_global.py  ingest_idx.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/: types.ts
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/src/app/glossary/: page.tsx
web/src/app/groups/: page.tsx
web/src/app/tickers/: page.tsx
web/src/components/: DashboardControls.tsx  DividendAnalytics.tsx  DrawdownChart.tsx  EPSTrendChart.tsx  FinancialsView.tsx  FundamentalsGrid.tsx  InfoTooltip.tsx  MACDChart.tsx  MetricCard.tsx  MiniStockChart.tsx  PercentageBadge.tsx  RSIChart.tsx  ResponsiveHeader.tsx  RiskAnalytics.tsx  StockChart.tsx  StrategyCard.tsx  TechnicalIndicators.tsx  ValuationRatios.tsx  VolatilityChart.tsx
web/src/components/ui/: command.tsx  tabs.tsx
web/src/lib/: api.ts  db.ts  env.ts  strategy.ts  technicalIndicators.ts
(+10 files in other folders)
